--- a/admin/app/views/main.scala.html
+++ b/admin/app/views/main.scala.html
@@ -29,12 +29,12 @@
     <title>@title</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="/css/bootstrap-3.1.1.min.css" rel="stylesheet">
+    <link href="/css/bootstrap-theme-3.1.1.min.css" rel="stylesheet">
 
     <!-- DataTables -->
-    <link href="//cdn.datatables.net/1.10.0/css/jquery.dataTables.css" rel="stylesheet">
-    <link href="//cdn.datatables.net/plug-ins/be7019ee387/integration/bootstrap/3/dataTables.bootstrap.css" rel="stylesheet">
+    <link href="/css/jquery.dataTables-1.10.0.css" rel="stylesheet">
+    <link href="/css/dataTables.bootstrap.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
     <!-- link href="http://getbootstrap.com/examples/dashboard/dashboard.css" rel="stylesheet" -->
