You can choose the hour, but it works as 00:00

--- a/admin/app/views/simulator.scala.html
+++ b/admin/app/views/simulator.scala.html
@@ -21,7 +21,7 @@
                 }
                 @helper.form(action = AdminController.gotoSimulator) {
                 <div>
-                    <input type="date" name="date">
+                    <input type="datetime-local" name="date">
                     <button id="ok" name="ok" type="submit" class="btn btn-success">Add pause</button>
                 </div>
                 }
