Importar Equipos, Futbolistas y Partidos de Opta
Los datos de Opta se clasifican según sean Nuevos, Modificados o Invalidos
Nuevos = No existen en la bdd de templates
Modificados = Han cambiado los datos registrados con respecto a los de Opta
Invalidos = Los datos de Opta no pueden ser importados correctamente, ya sea porque estan incompletos o no existan los datos necesarios en la bdd de templates para hacerlo correctamente (p.ej. un partido en el que participa un equipo no insertado en la bdd de templates de teams)

--- a/admin/app/views/dashboard.scala.html
+++ b/admin/app/views/dashboard.scala.html
@@ -17,8 +17,9 @@
 <br/>
 <br/>
 <div>
-    <a href="@AdminController.importTeamsAndSoccers"><button class="btn btn-warning">Import Teams & Soccers</button></a>
-    <a href="@AdminController.importMatchEvents"><button class="btn btn-warning">Import MatchEvents</button></a>
+    <a href="@AdminController.showImportTeams"><button class="btn btn-warning">Import Teams...</button></a>
+    <a href="@AdminController.showImportSoccers"><button class="btn btn-warning">Import Soccers...</button></a>
+    <a href="@AdminController.showImportMatchEvents"><button class="btn btn-warning">Import MatchEvents...</button></a>
 </div>
 
 <!--
