--- a/admin/app/views/points_translation_add.scala.html
+++ b/admin/app/views/points_translation_add.scala.html
@@ -1,10 +1,11 @@
-@(contestEntryForm: Form[controllers.admin.PointsTranslationForm])
+@(pointsTranslationForm: Form[controllers.admin.PointsTranslationForm])
 
 @import helper._
 @import helper.twitterBootstrap._
+@import utils.OptaUtils.OptaEventType
 
-@if(contestEntryForm.hasErrors) {
-    @controllers.admin.FlashMessage.danger("Contest Entry Form has errors")
+@if(pointsTranslationForm.hasErrors) {
+    @controllers.admin.FlashMessage.danger("Points Translation Form has errors")
 }
 
 @input_number(field: Field, _placeholder: String = "", _class: String = "") = {
@@ -30,9 +31,12 @@
 
     <!-- Text input-->
     <div class="control-group">
-        <label class="control-label">Event Type</label>
         <div class="controls">
-            @input_number(contestEntryForm("eventType"), _placeholder = "Event Type", _class = "form-control input-xlarge")
+            @select(
+            pointsTranslationForm("eventType"),
+            options(OptaEventType.options()),
+            '_label -> "Event Type"
+            )
         </div>
     </div>
 
@@ -40,7 +44,7 @@
     <div class="control-group">
         <label class="control-label">Points</label>
         <div class="controls">
-            @input_number(contestEntryForm("points"), _placeholder = "Points", _class = "form-control input-xlarge")
+            @input_number(pointsTranslationForm("points"), _placeholder = "Points", _class = "form-control input-xlarge")
         </div>
     </div>
 
