Event-Points translations are now editable

--- a/admin/app/views/points_translation_add.scala.html
+++ b/admin/app/views/points_translation_add.scala.html
@@ -29,6 +29,8 @@
     <!-- Form Name -->
     <legend>Point Translation</legend>
 
+    <input type="hidden" name="id" value='@pointsTranslationForm("id").value' >
+
     <!-- Text input-->
     <div class="control-group">
         <div class="controls">
