--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -25,7 +25,7 @@
         <tr>
             <td><a href="@AdminController.pointsTranslationsHistory(p.eventTypeId)">@OptaEventType.getEnum(p.eventTypeId).name()</td>
             <td>@OptaEventType.getEnum(p.eventTypeId).description</td>
-            <td>@p.points</td>
+            <td><a href="@AdminController.editPointForEvent(p.pointsTranslationId.toString())">@p.points</td>
             <td>@p.timestamp.format("yyyy/MM/dd HH:mm:ss")</td>
         </tr>
         }
