--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -18,10 +18,10 @@
 }
 
 @match_event_state(match_event_id : String) = {
-    @if(Model.isMatchEventFinished(match_event_id)) {
+    @if(TemplateMatchEvent.isFinished(match_event_id)) {
         <button class="btn btn-danger state_match_event" value="@match_event_id">Finished</button>
     } else {
-        @if(Model.isMatchEventStarted(match_event_id)) {
+        @if(TemplateMatchEvent.isStarted(match_event_id)) {
             <a href="@AdminController.liveMatchEventWithTemplate(match_event_id)"><button class="btn btn-success state_match_event" value="@match_event_id">Live</button></a>
         } else {
             <button class="btn btn-warning state_match_event" value="@match_event_id">Waiting</button>
