--- a/admin/app/views/live_match_event_list.scala.html
+++ b/admin/app/views/live_match_event_list.scala.html
@@ -1,5 +1,7 @@
 @(match_events: List[model.LiveMatchEvent])
 
+@import controllers.admin.DashboardController
+
 @scripts = {
     <script type="text/javascript">
 
@@ -45,6 +47,6 @@
     </table>
 </div>
 
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
