--- a/admin/app/views/contest_entry_add.scala.html
+++ b/admin/app/views/contest_entry_add.scala.html
@@ -2,6 +2,7 @@
 
 @import helper._
 @import helper.twitterBootstrap._
+@import controllers.admin.DashboardController
 
 @if(contestEntryForm.hasErrors) {
     @controllers.admin.FlashMessage.danger("Contest Entry Form has errors")
@@ -173,6 +174,6 @@
 <br/>
 
 <br/>
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
