--- a/admin/app/views/contest_entry_list.scala.html
+++ b/admin/app/views/contest_entry_list.scala.html
@@ -1,5 +1,7 @@
 @(contest_entries: List[model.ContestEntry])
 
+@import controllers.admin.DashboardController
+
 @main("Contest Entry - Admin") {
 
 <h1 class="page-header">Contest Entries</h1>
@@ -42,6 +44,6 @@
     </table>
 </div>
 
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
