--- a/admin/app/views/opta_event_list.scala.html
+++ b/admin/app/views/opta_event_list.scala.html
@@ -1,5 +1,7 @@
 @(opta_events: List[model.opta.OptaEvent])
 
+@import controllers.admin.DashboardController
+
 @main("Opta Events - Admin") {
 
 <h1 class="page-header">Opta Events</h1>
@@ -44,6 +46,6 @@
     </table>
 </div>
 
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
