--- a/admin/app/views/opta_soccer_team_list.scala.html
+++ b/admin/app/views/opta_soccer_team_list.scala.html
@@ -1,5 +1,7 @@
 @(teams: List[model.opta.OptaTeam])
 
+@import controllers.admin.DashboardController
+
 @main("Opta Soccer Teams - Admin") {
 
 <h1 class="page-header">Opta Soccer Teams</h1>
@@ -28,6 +30,6 @@
     </table>
 </div>
 
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
