--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -1,5 +1,6 @@
 @(points_translation: List[model.PointsTranslation])
 @import utils.OptaUtils.OptaEventType
+@import controllers.admin.DashboardController
 
 @main("Contests - Admin") {
 
@@ -33,6 +34,6 @@
     </table>
 </div>
 
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
