--- a/admin/app/views/template_contest_add.scala.html
+++ b/admin/app/views/template_contest_add.scala.html
@@ -2,6 +2,7 @@
 
 @import helper._
 @import helper.twitterBootstrap._
+@import controllers.admin.DashboardController
 
 @if(templateContestForm.hasErrors) {
     @controllers.admin.FlashMessage.danger("Template MatchEvent Form has errors")
@@ -108,6 +109,6 @@
 }
 
 <br/>
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
