--- a/admin/app/views/template_match_event_list.scala.html
+++ b/admin/app/views/template_match_event_list.scala.html
@@ -1,6 +1,7 @@
 @(match_events: List[model.TemplateMatchEvent])
 
 @import model._
+@import controllers.admin.DashboardController
 
 @scripts = {
     <script type="text/javascript">
@@ -65,6 +66,6 @@
     </table>
 </div>
 
-<a href='@AdminController.dashBoard'>Back to Dashboard</a>
+<a href='@DashboardController.index'>Back to Dashboard</a>
 
 }
