--- a/admin/app/views/import_match_events.scala.html
+++ b/admin/app/views/import_match_events.scala.html
@@ -30,7 +30,7 @@
         <tbody>
         @for(p <- matchs_new) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaMatchEventId</td>
             <td>@p.competitionName</td>
             <td>@p.seasonId</td>
             <td>@p.seasonName</td>
@@ -62,7 +62,7 @@
         <tbody>
         @for(p <- matchs_changed) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaMatchEventId</td>
             <td>@p.competitionName</td>
             <td>@p.seasonId</td>
             <td>@p.seasonName</td>
@@ -94,7 +94,7 @@
         <tbody>
         @for(p <- matchs_invalid) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaMatchEventId</td>
             <td>@p.competitionName</td>
             <td>@p.seasonId</td>
             <td>@p.seasonName</td>
