Forgotten ids in templates

--- a/admin/app/views/import_soccers.scala.html
+++ b/admin/app/views/import_soccers.scala.html
@@ -29,7 +29,7 @@
         <tbody>
         @for(p <- soccers_new) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.position</td>
             <td>@p.teamId</td>
@@ -61,7 +61,7 @@
         <tbody>
         @for(p <- soccers_changed) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.position</td>
             <td>@p.teamId</td>
@@ -93,7 +93,7 @@
         <tbody>
         @for(p <- soccers_invalid) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.position</td>
             <td>@p.teamId</td>
