--- a/admin/app/views/opta_match_event_list.scala.html
+++ b/admin/app/views/opta_match_event_list.scala.html
@@ -24,7 +24,7 @@
         <tbody>
         @for(p <- match_events) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaMatchEventId</td>
             <td>@p.competitionId</td>
             <td>@p.competitionName</td>
             <td>@p.seasonId</td>
