--- a/admin/app/views/opta_soccer_player_list.scala.html
+++ b/admin/app/views/opta_soccer_player_list.scala.html
@@ -21,7 +21,7 @@
         <tbody>
         @for(p <- soccers) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaPlayerId</td>
             <td>@p.name</td>
             <td>@p.position</td>
             <td>@p.teamId</td>
