--- a/admin/app/views/opta_soccer_team_list.scala.html
+++ b/admin/app/views/opta_soccer_team_list.scala.html
@@ -18,7 +18,7 @@
         <tbody>
         @for(p <- teams) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaTeamId</td>
             <td>@p.name</td>
             <td>@p.shortName</td>
             <td>@p.updatedTime</td>
