--- a/admin/app/views/import_teams.scala.html
+++ b/admin/app/views/import_teams.scala.html
@@ -26,7 +26,7 @@
         <tbody>
         @for(p <- teams_new) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaTeamId</td>
             <td>@p.name</td>
             <td>@p.shortName</td>
         </tr>
@@ -53,7 +53,7 @@
         <tbody>
         @for(p <- teams_changed) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaTeamId</td>
             <td>@p.name</td>
             <td>@p.shortName</td>
         </tr>
@@ -79,7 +79,7 @@
         <tbody>
         @for(p <- teams_invalid) {
         <tr>
-            <td>@p.id</td>
+            <td>@p.optaTeamId</td>
             <td>@p.name</td>
             <td>@p.shortName</td>
         </tr>
