Better button names

--- a/admin/app/views/points_translation_list.scala.html
+++ b/admin/app/views/points_translation_list.scala.html
@@ -3,11 +3,11 @@
 
 @main("Contests - Admin") {
 
-<h1 class="page-header">Contests</h1>
+<h1 class="page-header">Event-Point Translation List</h1>
 
-<a href="@AdminController.addPointsTranslation"><button class="btn btn-success">Add Points Translation</button></a>
-<a href="@AdminController.createPointsTranslation"><button class="btn btn-danger">Create Points Translation</button></a>
-<a href="@AdminController.updateOptaEvents"><button class="btn btn-danger">Update points of events</button></a>
+<a href="@AdminController.addPointsTranslation"><button class="btn btn-success">Add Score for Event</button></a>
+<a href="@AdminController.createPointsTranslation"><button class="btn btn-danger">Reset Events to Factory</button></a>
+<a href="@AdminController.updateOptaEvents"><button class="btn btn-danger">Recalculate Scores of All Events</button></a>
 
 <h2 class="sub-header"></h2>
 <div class="table-responsive">
